bloo-graph-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: bloo-graph
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: bloo-graph
    spec:
      containers:
      - name: bloo-graph
        image: gcr.io/bloo-cloud/bloo-graph:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 4000
