bloo-graph-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: bloo-graph
  labels:
    app: bloo-graph
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 4000
  selector:
    app: bloo-graph
