bloo-refdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bloo-refdb
  labels:
    app: bloo-refdb
spec:
  type: ClusterIP
  ports:
    - port: 3306
  selector:
    app: bloo-refdb
